test/errors/identifiers_error/zs/clashing_identifiers/clashing_identifiers_within_package_error.zs
package clashing_identifiers.clashing_identifiers_within_package_error;

struct Test
{
    uint8 field;
};

const uint8 TEST = 10;
